--- a/android/app/src/main/res/layout/activity_sign_in.xml
+++ b/android/app/src/main/res/layout/activity_sign_in.xml
@@ -8,7 +8,7 @@
     tools:context=".SignInActivity" >
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/sign_in_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username"
