--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
-    tools:context=".RegisterActivity" >
+    tools:context=".activity.RegisterActivity" >
 
     <EditText
         android:id="@+id/register_username"
