--- a/android/app/src/main/res/layout/activity_sign_in.xml
+++ b/android/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
-    tools:context=".SignInActivity" >
+    tools:context=".activity.SignInActivity" >
 
     <EditText
         android:id="@+id/sign_in_username"
