--- a/android/app/src/main/res/menu/menu_genre.xml
+++ b/android/app/src/main/res/menu/menu_genre.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.RecommendedArtistsActivity">
+xmlns:tools="http://schemas.android.com/tools"
+tools:context=".activity.GenreActivity">
 
     <item android:id="@+id/action_sign_out"
         android:title="@string/action_sign_out"
