--- a/android/app/src/main/res/menu/menu_recommended_artists.xml
+++ b/android/app/src/main/res/menu/menu_recommended_artists.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.RecommendedArtistsActivity">
 
+    <item android:id="@+id/action_search"
+        android:showAsAction="always"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_search"/>
+
     <item android:id="@+id/action_sign_out"
-        android:title="@string/action_sign_out"
-        android:showAsAction="never" />
+        android:title="@string/action_sign_out" />
 
 </menu>
